[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    # There is no fundamental reason to pin this CMake version, beyond
    # build stability.
    "cmake==3.22.2",
    "ninja==1.10.2",
    "packaging",
    # Version 2.7.0 excluded: https://github.com/pybind/pybind11/issues/3136
    "pybind11>=2.6.0,!=2.7.0",
    "PyYAML",

    # The torch-mlir CMake build requires numpy and torch to be installed.
    # Further, the setup.py will pin the version selected here into built
    # artifacts.
    # TODO: Come up with a better way to pin the version.
    "numpy",
    "torch==1.12.0.dev20220420",
]
build-backend = "setuptools.build_meta"
