[build-system]
requires = [
    "cmake",
    "ninja",
    "numpy",
    "packaging",
    "pybind11",
    "PyYAML",
    "setuptools",
    "wheel",
    #PyTorch build requirements
    "astunparse",
    "expecttest",
    "future",
    "psutil",
    "pyyaml",
    "requests",
    "six",
    "types-dataclasses",
    "typing_extensions",
    "sympy",
]
build-backend = "setuptools.build_meta"
