[build-system]
# These must be enough to drive setup.py's CMake build of the MLIR Python
# bindings under build isolation (cibuildwheel). Kept in sync with the
# [dependency-groups].build table below and
# externals/llvm-project/mlir/python/requirements.txt (re-sync on LLVM bumps).
requires = [
    "setuptools",
    "wheel",
    "cmake",
    "ninja<1.13.0; sys_platform == 'win32'",
    "ninja; sys_platform != 'win32'",
    "packaging",
    "nanobind>=2.9, <3.0",
    "PyYAML>=5.4.0, <=6.0.1",
    "typing_extensions>=4.12.2",
    "numpy>=2.1.0, <=2.1.2",
    "ml_dtypes>=0.5.0, <=0.6.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']

# NOTE: torch-mlir's Python package is produced by the CMake build (see the
# custom `build_py` in setup.py), not by setuptools' source-tree discovery.
# Auto-discovery is disabled via `packages=[]` passed directly in setup.py.
# We intentionally do NOT define a `[tool.setuptools]` (or `[project]`) table
# here: doing so makes modern setuptools treat pyproject.toml as the metadata
# source and reject the setup.py-driven build with
# "`project` must contain ['version'] properties".

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux* *_i686 *-win32"
build-frontend = "build[uv]"
before-test = "pip install -r {project}/pytorch-requirements.txt"
test-command = "python {project}/build_tools/smoke_test.py"

# Build with the manylinux default gcc toolchain. ccache reuses the LLVM/MLIR
# object cache across the per-Python-version builds; CMake reads the
# *_COMPILER_LAUNCHER cache vars from these env vars. CCACHE_DIR lives inside
# the mounted /project so the host's actions/cache can persist it.
[tool.cibuildwheel.linux]
archs = "auto64"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "dnf install -y --quiet epel-release || true && dnf install -y --quiet ccache || dnf install -y ccache"
environment-pass = ["TORCH_MLIR_PYTHON_PACKAGE_VERSION"]
environment = { TORCH_MLIR_ENABLE_ONLY_MLIR_PYTHON_BINDINGS = "1", TORCH_MLIR_ENABLE_JIT_IR_IMPORTER = "0", TORCH_MLIR_ENABLE_LTC = "0", CMAKE_GENERATOR = "Ninja", CMAKE_C_COMPILER_LAUNCHER = "ccache", CMAKE_CXX_COMPILER_LAUNCHER = "ccache", CCACHE_DIR = "/project/.ccache", CCACHE_MAXSIZE = "2G" }

[tool.cibuildwheel.macos]
archs = "auto64"
before-all = "brew install ccache ninja"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", TORCH_MLIR_ENABLE_ONLY_MLIR_PYTHON_BINDINGS = "1", TORCH_MLIR_ENABLE_JIT_IR_IMPORTER = "0", TORCH_MLIR_ENABLE_LTC = "0", CMAKE_GENERATOR = "Ninja", CMAKE_C_COMPILER_LAUNCHER = "ccache", CMAKE_CXX_COMPILER_LAUNCHER = "ccache" }

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path {project}/build/cmake_build/tools/torch-mlir/python_packages/torch_mlir/torch_mlir/_mlir_libs --add-dll TorchMLIRAggregateCAPI.dll --no-dll \"c10.dll;torch_python.dll;torch_cpu.dll\" -w {dest_dir} {wheel}"
environment = { TORCH_MLIR_ENABLE_ONLY_MLIR_PYTHON_BINDINGS = "1", TORCH_MLIR_ENABLE_JIT_IR_IMPORTER = "0", TORCH_MLIR_ENABLE_LTC = "0", CMAKE_GENERATOR = "Ninja", TORCH_MLIR_CMAKE_BUILD_DIR = "build/cmake_build" }
